--- a/html/slideshow.html
+++ b/html/slideshow.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h2 class="w3-center">Manual Slideshow</h2>
+	<h2 class="w3-center">Dhruv's Slides</h2>
 	<div class="w3-content" style="max-width:800px;position:relative">
 		<img class="mySlides" src="../imgs/spain29.jpg" style="width:100%">
 		<img class="mySlides" src="../imgs/spain31.jpg" style="width:100%">
@@ -35,5 +35,5 @@
 		  }
 		  x[slideIndex-1].style.display = "block";
 		}
-</script>
+	</script>
 </body>
