Trying some stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Dhruvpuru.GitHub.io by DhruvPuru</title>
+    <title>Dhruv Purushottam</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -14,12 +14,36 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Dhruvpuru.GitHub.io</h1>
+            <h1>Dhruv Purushottam</h1>
             <p></p>
-            <p class="view"><a href="http://dhruvpuru.github.io/html/index.html">View My Photos </a></p>
+            <p class="view"><a href="http://dhruvpuru.github.io/html/slideshow.html">View My Photos </a></p>
             <p class="view"><a href="https://github.com/DhruvPuru">My GitHub</a></p>
 
         </header>
+
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/cv">CV</a></li>
+                <li><a href="/blog">Blog</a></li>
+            </ul>
+        </nav>
+        <div class="container">
+            <div class="blurb">
+                <h1>Hi there, I'm Dhruv!</h1>
+                <!-- <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p> -->
+            </div>
+            <!-- /.blurb -->
+        </div>
+        <!-- /.container -->
+        <footer>
+            <ul>
+                <li><a href="mailto:dhruv.purushottam@gmail.com">email</a></li>
+                <li><a href="https://github.com/DhruvPuru">Github</a></li>
+            </ul>
+        </footer>
+        <!-- New code -->
         <section>
             <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
