Applying layout to slideshow

--- a/html/slideshow.html
+++ b/html/slideshow.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Slideshow</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-</head>
-
-<body>
+---
+layout: default
+title: Dhruv Purushottam
+---
 	<h2 class="w3-center">Dhruv's Slides</h2>
 	<div class="w3-content" style="max-width:800px;position:relative">
 		<img class="mySlides" src="../imgs/spain29.jpg" style="width:100%">
@@ -36,4 +31,3 @@
 		  x[slideIndex-1].style.display = "block";
 		}
 	</script>
-</body>
