--- a/html/slideshow.html
+++ b/html/slideshow.html
@@ -2,6 +2,7 @@
 layout: default
 title: Dhruv Purushottam
 ---
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<h2 class="w3-center">Dhruv's Slides</h2>
 	<div class="w3-content" style="max-width:800px;position:relative">
 		<img class="mySlides" src="../imgs/spain29.jpg" style="width:100%">
